# robotic_Car

./: PWM.c  PWM.h  Ports_Pins.xlsx  README.md
Communications/: M5Uart.py  M5uartweb.py  README.md
Communications/UART_MSP_ESP01/: .ccsproject  .cproject  .project  ESP8266.c  ESP8266.h  UART_Driver.c  UART_Driver.h  gpio_toggle_output.c  startup_msp432p401r_ccs.c
Communications/UART_MSP_ESP01/.launches/: UART_ESP01.launch  gpio_toggle_output.launch
Communications/UART_MSP_ESP01/Debug/: ESP8266.d  UART_Driver.d  UART_ESP01.map  UART_ESP01.out  ccsObjs.opt  (+9 more)
Communications/UART_MSP_M5/: gpio_input_interrupt.c
Communications/UART_MSP_M5_(Labelled & integrate with ultrasonic)/: .ccsproject  .cproject  .project  gpio_input_interrupt.c  startup_msp432p401r_ccs.c
Communications/UART_MSP_M5_V2(With Label)/: .project  gpio_input_interrupt.c  startup_msp432p401r_ccs.c
Infrared/: Barcode Readings.xlsx  Ports_Pins.xlsx  README.md  barcode.c  barcode.h  main.c
Project  Indegrate/: main.c  startup_msp432p401r_ccs.c
Project  Indegrate/Barcode/: barcode.c  barcode.h
Project  Indegrate/Motor/: PWM.c
Project Integrate/: main.c
Project Integrate/Barcode_Comms_Ultrasonic/: barcode.c  barcode.h
Project Integrate/Motor/: PWM.h
mapping_navigation/: README.md
mapping_navigation/src/: MappingNaviOptimized.c  MappingNaviWorking.c
motor/: PWM.c  PWM.h  main.c  readme.md
ultrasonic_accelerometer/: README.md  ultrasonic.c
ultrasonic_accelerometer/accelerometer/: CMakeLists.txt  mpu6050_i2c.c
ultrasonic_accelerometer/ultrasonic/: README.md  ultrasonic.c  ultrasonic.h
(+32 files in other folders)
